tests/ui/impl-trait/precise-capturing/capturing-implicit.stderr
error: []
  --> $DIR/capturing-implicit.rs:8:19
   |
LL | fn foo(x: &()) -> impl IntoIterator<Item = impl Sized> + use<> {
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: []
  --> $DIR/capturing-implicit.rs:8:44
   |
LL | fn foo(x: &()) -> impl IntoIterator<Item = impl Sized> + use<> {
   |                                            ^^^^^^^^^^

error: aborting due to 2 previous errors

